  URLRouter, in order to route your Django application.
* The supporting ``AsgiRequest`` is also removed, as it was only used for ``AsgiHandler``.

  TODO: Repeat the basic asgi.py (née routing.py) example here, which is the minimum folks using the old automatic http
        handler routing would need to update.


3.0.5 (2022-06-24)
------------------

Channels 3.0.5 is a bugfix release in the 3.0 series.

Please see the `Version 3.0.5 release notes
<https://channels.readthedocs.io/en/latest/releases/3.0.5.html>`_ for full
details.


3.0.4 (2021-07-11)
------------------

Channels 3.0.4 is a bugfix release in the 3.0 series.

Please see the `Version 3.0.4 release notes
<https://channels.readthedocs.io/en/latest/releases/3.0.4.html>`_ for full
details.


3.0.3 (2020-12-28)
------------------

* Fixed a bug in Channels 3.0 where the legacy ``channels.http.AsgiHandler``
  would not correctly isolate per-request scopes.

  This is a security release for CVE-2020-35681. Please see the `Version 3.0.3
  release notes
  <https://channels.readthedocs.io/en/latest/releases/3.0.3.html>`_ for full
  details.


3.0.2 (2020-11-9)
-----------------

* Fixes a bug in Channels 3.0 where ``StaticFilesWrapper`` was not updated to
  the ASGI 3 single-callable interface.

* Users of the ``runworker`` command should ensure to update ``asgiref`` to
  version 3.3.1 or later.


3.0.1 (2020-11-4)
-----------------

* Fixes a bug in Channels 3.0 where ``SessionMiddleware`` would not correctly
  isolate per-instance scopes.


3.0.0 (2020-10-30)
------------------

Updated to ASGI v3, and added support for Django 3.0+.

This is a major version change requiring updates to consumers and middleware.
Please see the full `Version 3.0.0 release notes
<https://channels.readthedocs.io/en/latest/releases/3.0.0.html>`_ for details.


2.4.0 (2019-12-18)
------------------

* Wraps session save calls in ``database_sync_to_async()``, for compatibility
  with Django 3.0's ``async_unsafe()`` checks.
